<resources>
    <string name="app_name">android-wanted-SensorDashboardApp</string>

    <!-- measure activity -->
    <string name="measure_top_title">측정하기</string>
    <string name="measure_save">저장</string>
    <string name="measure">측정</string>
    <string name="measure_stop">정지</string>
    <string name="measure_gyro">Gyro</string>
    <string name="measure_acc">Acc</string>
    <string name="measure_empty">측정된 데이터가 없습니다.</string>
    <string name="measure_save_success">저장에 성공했습니다.</string>
    <string name="measure_x_init">x 0.0</string>
    <string name="measure_y_init">y 0.0</string>
    <string name="measure_z_init">z 0.0</string>

    <!-- replay activity -->
    <string name="replay_top_title">다시 보기</string>
    <string name="replay_item_date_hint">2022/09/07 15:10:11</string>
    <string name="replay_item_current_state_hint">Play</string>
    <string name="replay_state_play">Play</string>
    <string name="replay_state_view">View</string>
    <string name="replay_state_stop">Stop</string>
    <string name="replay_measure_time">10.5</string>

</resources>